@@ -72,6 +72,7 @@
     + All circuits map, PHP object injection (#2937);
     + Upgraded jQuery to 3.5.1 (#3119);
     + Stored XSS in instructions widgets (#3025);
+    + PHP session ID fixation (#3342);
 
     Translations:
     ----------------------------
